am adaugat meniuri drop-down

--- a/try.html
+++ b/try.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>Gigel Bank</title>
-    <link rel="stylesheet" href="try.css">
+    <meta charset="utf-8">   <!--ce tip de char cod folosim-->
+    <title>Gigel Bank</title>   <!--Ce apare sus la browser-->
+    <link rel="stylesheet" href="try.css">  <!--pune toate css format info acolo-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
     body{
@@ -42,7 +41,7 @@
     nav a:hover{
       background:red;
       transition:0.5;
-      text-transform: uppercase;
+      /* Hanna - parerea mea, arata mai bine fara transformare in uppercase text-transform: uppercase; */
     }
     </style>
     </head>
@@ -51,6 +50,7 @@
     </div>
     <nav>
       <ul>
+        <li>  "  "   </li> <!--Hanna: am adaugat un pic de spatiu pentru partea rosie sa nu suprapuna asupra logo "Gigel Bank"-->
         <li><a href="#"> Home </a></li>
         <li><a href="#"> Gigel </a></li>
         <li><a href="#"> Products </a></li>
