--- a/home.html
+++ b/home.html
@@ -14,21 +14,26 @@
     }
     nav{
       width: 100%;
-      background:black;
+      background: black; /*Nu inteleg de ce ignora background aici... rezolvarea problemei ar rezulta in rezolvaream problemei si pentru text care scrolleaza asupra meniu*/
       overflow:auto;
     }
     ul {
       position:fixed; /*am pus fixed aici in loc de nav ca sa nu avem probleme cu toate elementele fiind puse in acelasi loc...*/
       padding: 0;
-      margin: 0 0 0 150px;
+      margin: 0 0 0 140px;
       list-style:none;
     }
     li{
       float:left;
     }
     .log img{
-    margin-top:15px;
-    margin-left:10px;
+    margin-top: 500px;
+    margin-left:0px;
+    margin-right: 0px;
+    height: 58px;
+    width: 140px;
+    background: black;
+    margin: 0px;
     }
     nav a{
       width: 120px;  /* Hanna: am creat mai mult spatiu. */
@@ -120,15 +125,20 @@
       background-color: darkgreen;
     }
 
+    p {
+      z-index: 1;
+
+    }
+
     </style>
     </head>
     <body>
-    <div style="position: fixed; left:5px;top:-50px;" class="log"><a href="#"><img src="GigelBank.png" width="140" height= "140" /></a>
+      <br>
+    <div style="position: fixed; left:0px;top:18px;" class="log"><a href="#"><img src="GigelBankCrop.png" width="150" height= "100" /></a>
       <!--am schimbat pozitie sa fie fixed in loc de absolut-->
     </div>
     <nav>
       <ul>
-        <li>  "  "   </li> <!--Hanna: am adaugat un pic de spatiu pentru partea rosie sa nu suprapuna asupra logo "Gigel Bank"-->
         <li><a href="home.html" class="top-level"> Home </a></li> <!--Hanna: am schimbat numele fisierul sa fie "home.html" si am pus navigation bar sa se refere la page-->
         <li>
             <div class="top-level">
@@ -201,8 +211,8 @@
     </div>
   <font color="white">
     <br><br><br><br><br><br><br>
-<br>
-Momentan am pus textul acesta sa testam daca merge bine pozitie fix pentru meniuri si login.
+<br> <!--am o problema aici... textul se pune asupra meniuri cand facem scroll-->
+<p>Momentan am pus textul acesta sa testam daca merge bine pozitie fix pentru meniuri si login.</p>
 <br><br><br>
 money
 <br><br><br>
